k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: college-it
  labels:
    app.kubernetes.io/part-of: college-it
