k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: college-it
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/part-of: college-it
spec:
  clusterIP: None
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
  selector:
    app.kubernetes.io/name: postgres
