k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend
  namespace: college-it
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: college-it
spec:
  to:
    kind: Service
    name: frontend
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
